<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_background_castle"
    tools:context=".ui.difficulty.DifficultyFragment">


    <TextView
        android:id="@+id/tvDifficultyMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_00000000"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-14dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/to_menu"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDifficultyBack"
        app:layout_constraintEnd_toEndOf="@+id/btnDifficultyBack" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/choose_room_size"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/small"
        android:textColor="@color/yellow"
        android:textSize="39sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintEnd_toEndOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintStart_toStartOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultySmallRoom" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/medium"
        android:textColor="@color/yellow"
        android:textSize="39sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintEnd_toEndOf="@+id/btnDifficultyMediumRoom"
        app:layout_constraintStart_toStartOf="@+id/btnDifficultyMediumRoom"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultySmallRoom" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:src="@drawable/icon_up_bar"
        android:translationZ="-2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnDifficultyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/icon_back_to_menu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnDifficultySmallRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:src="@drawable/icon_button_difficulty_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDifficultyMediumRoom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/btnDifficultyMediumRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_button_difficulty_medium"
        app:layout_constraintBottom_toBottomOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintEnd_toStartOf="@+id/btnDifficultyBigRoom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultySmallRoom" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/big"
        android:textColor="@color/yellow"
        android:textSize="39sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDifficultySmallRoom"
        app:layout_constraintEnd_toEndOf="@+id/btnDifficultyBigRoom"
        app:layout_constraintStart_toStartOf="@+id/btnDifficultyBigRoom"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultySmallRoom" />

    <ImageView
        android:id="@+id/btnDifficultyBigRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:src="@drawable/icon_button_difficulty_big"
        app:layout_constraintBottom_toBottomOf="@+id/btnDifficultyMediumRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDifficultyMediumRoom"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultyMediumRoom" />
</androidx.constraintlayout.widget.ConstraintLayout>