<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_background_store"
    tools:context=".ui.shop.ShopFragment">


    <TextView
        android:id="@+id/tvShopFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/furniture"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShopFurniture"
        app:layout_constraintEnd_toEndOf="@+id/btnShopFurniture"
        app:layout_constraintStart_toStartOf="@+id/btnShopFurniture"
        app:layout_constraintTop_toTopOf="@+id/btnShopFurniture" />

    <TextView
        android:id="@+id/tvShopChineseZodiac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/chinese_zodiac"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShopChineseZodiac"
        app:layout_constraintEnd_toEndOf="@+id/btnShopChineseZodiac"
        app:layout_constraintStart_toStartOf="@+id/btnShopChineseZodiac"
        app:layout_constraintTop_toTopOf="@+id/btnShopChineseZodiac" />

    <TextView
        android:id="@+id/tvShopChineseArtAndDecor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/chinese_art_and_decor"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShopChineseArtAndDecor"
        app:layout_constraintEnd_toEndOf="@+id/btnShopChineseArtAndDecor"
        app:layout_constraintStart_toStartOf="@+id/btnShopChineseArtAndDecor"
        app:layout_constraintTop_toTopOf="@+id/btnShopChineseArtAndDecor" />

    <TextView
        android:id="@+id/tvShopMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_00000000"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-14dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/to_menu"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShopBack"
        app:layout_constraintEnd_toEndOf="@+id/btnShopBack" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/shop"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:src="@drawable/icon_up_bar"
        android:translationZ="-2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnShopBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/icon_back_to_menu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnShopFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:src="@drawable/icon_furniture_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShopChineseArtAndDecor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnShopChineseArtAndDecor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_chinese_art_and_decor_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShopChineseZodiac"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShopFurniture" />

    <ImageView
        android:id="@+id/btnShopChineseZodiac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:src="@drawable/icon_chinese_zodiac_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShopChineseArtAndDecor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:paddingBottom="50dp"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>