<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop_pop_up.ShopPopUpFragment">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="592dp"
        android:layout_height="309dp"
        android:src="@drawable/icon_background_pop_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShopPopUpMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_00000000"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvShopPopUpCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_100000"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnShopPopUpClose"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvShopPopUpCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_1"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnShopPopUpPlus"
        app:layout_constraintStart_toEndOf="@+id/btnShopPopUpMinus"
        app:layout_constraintTop_toBottomOf="@+id/tvShopPopUpCost" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/buy"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShopPopUpBuy"
        app:layout_constraintEnd_toEndOf="@+id/btnShopPopUpBuy"
        app:layout_constraintStart_toStartOf="@+id/btnShopPopUpBuy"
        app:layout_constraintTop_toTopOf="@+id/btnShopPopUpBuy" />

    <TextView
        android:id="@+id/tvShopPopUpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/dragon_statue"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="@+id/ivShowPopUpImage"
        app:layout_constraintStart_toStartOf="@+id/ivShowPopUpImage"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <ImageView
        android:id="@+id/btnShopPopUpClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/icon_button_exit_pop_up"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/btnShopPopUpMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:src="@drawable/icon_button_minus_pop_up"
        app:layout_constraintBottom_toBottomOf="@+id/btnShopPopUpPlus"
        app:layout_constraintEnd_toStartOf="@+id/btnShopPopUpPlus"
        app:layout_constraintTop_toTopOf="@+id/btnShopPopUpPlus" />

    <ImageView
        android:id="@+id/btnShopPopUpPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:src="@drawable/icon_button_plus_pop_up"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/btnShopPopUpBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="33dp"
        android:src="@drawable/icon_button_buy_shop_pop_up"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/ivShowPopUpImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:src="@drawable/icon_chinese_art_and_decor_image_1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />
</androidx.constraintlayout.widget.ConstraintLayout>