<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_info_background"
    tools:context=".ui.info.InfoFragment">

    <TextView
        android:id="@+id/tvInfoWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/wheel"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnInfoWheel"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoWheel"
        app:layout_constraintStart_toEndOf="@+id/btnInfoShop"
        app:layout_constraintTop_toTopOf="@+id/btnInfoWheel" />

    <TextView
        android:id="@+id/tvInfoShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/shop"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnInfoShop"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoShop"
        app:layout_constraintStart_toStartOf="@+id/btnInfoShop"
        app:layout_constraintTop_toTopOf="@+id/btnInfoShop" />

    <TextView
        android:id="@+id/tvInfoMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_00000000"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/to_menu"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnInfoBack"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoBack" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/info"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvInfoAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/about"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoAbout"
        app:layout_constraintStart_toStartOf="@+id/btnInfoAbout"
        app:layout_constraintTop_toTopOf="@+id/btnInfoAbout" />

    <TextView
        android:id="@+id/tvInfoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="43sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvInfoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <TextView
        android:id="@+id/tvInfoSimulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/simulator"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnInfoSimulator"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoSimulator"
        app:layout_constraintStart_toStartOf="@+id/btnInfoSimulator"
        app:layout_constraintTop_toTopOf="@+id/btnInfoSimulator" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:src="@drawable/icon_up_bar"
        android:translationZ="-2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnInfoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/icon_back_to_menu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/btnInfoAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:src="@drawable/icon_about_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInfoSimulator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnInfoSimulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:src="@drawable/icon_simulator_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInfoShop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInfoAbout" />

    <ImageView
        android:id="@+id/btnInfoShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:src="@drawable/icon_shop_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInfoWheel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInfoSimulator" />

    <ImageView
        android:id="@+id/btnInfoWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_wheel_button_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInfoShop" />
</androidx.constraintlayout.widget.ConstraintLayout>